--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-react": "webpack --mode production",
+    "start-react": "webpack serve --config ./web/webpack.config.js --mode development"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.5",
+    "html-webpack-plugin": "^5.5.3",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.1",
+    "react-native-web": "^0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.22.6",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
@@ -24,12 +30,18 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-react-native-web": "^0.19.6",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "engines": {
     "node": ">=16"
