--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "^0.72.1",
+    "react-native-linear-gradient": "^2.7.3",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.19.6"
   },
   "devDependencies": {
